# vellum-osint

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
docs/architecture/: intel-graph.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: domain.rs  error.rs  ipc.rs  ledger.rs  lib.rs  main.rs  repo.rs  schema.sql
src-tauri/src/vault/: mod.rs
src-tauri/tests/: persistence.rs
src/app/: App.tsx  router.ts
src/app/shell/: AppShell.tsx  NavRail.tsx  StatusBar.tsx
src/features/caseDetail/: CaseDetailScreen.tsx
src/features/cases/: CasesScreen.tsx  NewCaseModal.tsx
src/features/command-palette/: CommandPalette.tsx
src/features/cover/: CoverScreen.tsx
src/features/graph/: GraphScreen.tsx  Inspector.tsx
src/features/onboarding/: Onboarding.tsx
src/features/reports/: PdfDocument.tsx  ReportsScreen.tsx
src/features/settings/: SettingsScreen.tsx
src/features/timeline/: TimelineScreen.tsx
src/lib/: api.ts  casesStore.ts  commands.ts  demoCase.ts  entitiesStore.ts  graphLayout.ts  kindDetect.ts  mockData.ts  shortcuts.ts  themeStore.ts  toasts.ts  types.ts
src/styles/: global.css
src/ui/primitives/: Avatar.tsx  Badge.tsx  Button.tsx  Card.tsx  ContextMenu.tsx  Divider.tsx  EntityQuickInput.tsx  IconTile.tsx  Input.tsx  Kbd.tsx  ListRow.tsx  Modal.tsx  Spinner.tsx  Stat.tsx  Switch.tsx  Toaster.tsx  Tooltip.tsx
src/ui/shapes/: Shapes.tsx
src/ui/tokens/: colors.ts  layout.ts  motion.ts  space.ts  (+1 more)
(+1 files in other folders)
